# TUGAS-BESAR-APLIKASI-PAINT-APP

./: .gitignore  CMakeLists.txt  README.md  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintwidget.cpp  paintwidget.h  resource.qrc  scribblearea.cpp  scribblearea.h
paint_app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scribblearea.cpp  scribblearea.h
